--- a/part 0/0.4.md
+++ b/part 0/0.4.md
@@ -1,32 +1,44 @@
-# Exercise 0.4 – New note diagram
-
-```mermaid
 sequenceDiagram
     participant browser
+    participant admin
     participant server
 
     Note right of browser: User writes a note in the text field
     Note right of browser: User clicks the Save button
 
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/notes
+    browser->>admin: POST /exampleapp/notes
+    activate admin
+    admin->>server: POST /exampleapp/notes
     activate server
     Note right of server: Server saves the new note
-    server-->>browser: HTTP 302 Redirect to /exampleapp/notes
+    server-->>admin: HTTP 302 Redirect to /exampleapp/notes
     deactivate server
+    admin-->>browser: HTTP 302 Redirect to /exampleapp/notes
+    deactivate admin
 
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+    browser->>admin: GET /exampleapp/notes
+    activate admin
+    admin->>server: GET /exampleapp/notes
     activate server
-    server-->>browser: HTML document
+    server-->>admin: HTML document
     deactivate server
+    admin-->>browser: HTML document
+    deactivate admin
 
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    browser->>admin: GET /exampleapp/main.css
+    admin->>server: GET /exampleapp/main.css
+
+    browser->>admin: GET /exampleapp/main.js
+    admin->>server: GET /exampleapp/main.js
 
     Note right of browser: Browser fetches updated notes
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+    browser->>admin: GET /exampleapp/data.json
+    activate admin
+    admin->>server: GET /exampleapp/data.json
     activate server
-    server-->>browser: Updated notes (JSON)
+    server-->>admin: Updated notes (JSON)
     deactivate server
+    admin-->>browser: Updated notes (JSON)
+    deactivate admin
 
     Note right of browser: Browser renders the updated notes list
-```
