--- a/part 0/0.4.md
+++ b/part 0/0.4.md
@@ -1,46 +1,34 @@
 sequenceDiagram
-    participant browser
-    participant admin
-    participant server
+    participant Browser
+    participant Admin
+    participant Server
 
-    Note right of browser: User writes a note in the text field
-    Note right of browser: User clicks the Save button
+    Note right of Browser: User writes a note
+    Note right of Browser: User clicks Save
 
-    browser->>admin: POST /exampleapp/notes
-    activate admin
-    admin->>server: POST /exampleapp/notes
-    activate server
-    Note right of server: Server saves the new note
-    server-->>admin: HTTP 302 Redirect to /exampleapp/notes
-    deactivate server
-    admin-->>browser: HTTP 302 Redirect to /exampleapp/notes
-    deactivate admin
+    Browser->>Admin: POST /exampleapp/notes
+    Admin->>Server: POST /exampleapp/notes
+    Note right of Server: Note is saved
+    Server-->>Admin: 302 Redirect /exampleapp/notes
+    Admin-->>Browser: 302 Redirect /exampleapp/notes
 
-    browser->>admin: GET /exampleapp/notes
-    activate admin
-    admin->>server: GET /exampleapp/notes
-    activate server
-    server-->>admin: HTML document
-    deactivate server
-    admin-->>browser: HTML document
-    deactivate admin
+    Browser->>Admin: GET /exampleapp/notes
+    Admin->>Server: GET /exampleapp/notes
+    Server-->>Admin: HTML document
+    Admin-->>Browser: HTML document
 
-    browser->>admin: GET /exampleapp/main.css
-    admin->>server: GET /exampleapp/main.css
+    Browser->>Admin: GET /exampleapp/main.css
+    Admin->>Server: GET /exampleapp/main.css
 
-    browser->>admin: GET /exampleapp/main.js
-    admin->>server: GET /exampleapp/main.js
+    Browser->>Admin: GET /exampleapp/main.js
+    Admin->>Server: GET /exampleapp/main.js
 
-    Note right of browser: Browser fetches updated notes
-    browser->>admin: GET /exampleapp/data.json
-    activate admin
-    admin->>server: GET /exampleapp/data.json
-    activate server
-    server-->>admin: Updated notes (JSON)
-    deactivate server
-    admin-->>browser: Updated notes (JSON)
-    deactivate admin
+    Browser->>Admin: GET /exampleapp/data.json
+    Admin->>Server: GET /exampleapp/data.json
+    Server-->>Admin: Updated notes (JSON)
+    Admin-->>Browser: Updated notes (JSON)
 
-    Note right of browser: Browser renders the updated notes list
+    Note right of Browser: Updated notes are rendered
 
 
+    
