--- a/part 0/0.4.md
+++ b/part 0/0.4.md
@@ -1,34 +1,19 @@
 sequenceDiagram
-    participant Browser
-    participant Admin
-    participant Server
+participant Browser
+participant Admin
+participant Server
 
-    Note right of Browser: User writes a note
-    Note right of Browser: User clicks Save
+Browser->>Admin: POST /notes
+Admin->>Server: POST /notes
+Server-->>Admin: 302 Redirect
+Admin-->>Browser: 302 Redirect
 
-    Browser->>Admin: POST /exampleapp/notes
-    Admin->>Server: POST /exampleapp/notes
-    Note right of Server: Note is saved
-    Server-->>Admin: 302 Redirect /exampleapp/notes
-    Admin-->>Browser: 302 Redirect /exampleapp/notes
+Browser->>Admin: GET /notes
+Admin->>Server: GET /notes
+Server-->>Admin: HTML
+Admin-->>Browser: HTML
 
-    Browser->>Admin: GET /exampleapp/notes
-    Admin->>Server: GET /exampleapp/notes
-    Server-->>Admin: HTML document
-    Admin-->>Browser: HTML document
-
-    Browser->>Admin: GET /exampleapp/main.css
-    Admin->>Server: GET /exampleapp/main.css
-
-    Browser->>Admin: GET /exampleapp/main.js
-    Admin->>Server: GET /exampleapp/main.js
-
-    Browser->>Admin: GET /exampleapp/data.json
-    Admin->>Server: GET /exampleapp/data.json
-    Server-->>Admin: Updated notes (JSON)
-    Admin-->>Browser: Updated notes (JSON)
-
-    Note right of Browser: Updated notes are rendered
-
-
-    
+Browser->>Admin: GET /data.json
+Admin->>Server: GET /data.json
+Server-->>Admin: JSON
+Admin-->>Browser: JSON
