--- a/part 0/0.4.md
+++ b/part 0/0.4.md
@@ -2,9 +2,14 @@
 sequenceDiagram
     participant browser
     participant server
+    participant admin
 
     browser->>server: POST /exampleapp/new_note
     activate server
+    server->>admin: Store new note
+    activate admin
+    admin-->>server: Note stored successfully
+    deactivate admin
     server-->>browser: Redirect to /exampleapp/notes
     deactivate server
 
@@ -20,4 +25,6 @@ sequenceDiagram
     server-->>browser: JavaScript file
 
     browser->>server: GET /exampleapp/data.json
+    server->>admin: Fetch updated notes
+    admin-->>server: Updated notes list
     server-->>browser: Updated notes list
